# privchat-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-Hans.md  TODO.md
.cargo/: config.toml
assets/: 20240101000001.sql
crates/privchat-ffi/: .gitignore  Cargo.toml  README.md  build.rs  uniffi.android.toml  uniffi.jvm.toml  uniffi.toml
crates/privchat-ffi-macros/: Cargo.toml
crates/privchat-ffi-macros/src/: lib.rs
crates/privchat-ffi/examples/: complete_workflow.rs
crates/privchat-ffi/scripts/: generate-bindings.sh
crates/privchat-ffi/src/: api.udl  config.rs  error.rs  events.rs  helpers.rs  lib.rs  observer_tests.rs  sdk.rs  task_handle.rs
crates/privchat-ffi/tests/: ffi_tests.rs
crates/privchat-ffi/uniffi-bindgen/: Cargo.toml
crates/privchat-ffi/uniffi-bindgen/src/: main.rs
crates/privchat-sdk/: Cargo.toml  README.md  build.rs
crates/privchat-sdk-ffi/: Cargo.toml  build.rs  uniffi.android.toml  uniffi.toml
crates/privchat-sdk-ffi/examples/: basic.rs  qr_decode_image.rs
crates/privchat-sdk-ffi/src/: lib.rs  qr.rs
crates/privchat-sdk-ffi/uniffi-bindgen/: Cargo.toml
crates/privchat-sdk-ffi/uniffi-bindgen/src/: main.rs
crates/privchat-sdk/demo_data_rpc/demo_user/: privchat.db
crates/privchat-sdk/examples/: backpressure_g7.rs  basic.rs  connection_state_demo.rs  demo.rs  hydration_check.rs  main.rs  multi_user_demo.rs  phase8_sync_demo.rs  rate_limiter_demo.rs  reconnect_storm.rs  rpc_demo.rs  test_new_sdk.rs  time_handling_demo.rs  timezone_config_demo.rs
crates/privchat-sdk/examples/accounts/: Cargo.toml  account_manager.rs  coordinator.rs  main.rs  phases.rs  types.rs
crates/privchat-sdk/examples/basic/: Cargo.toml  README.md  main.rs
crates/privchat-sdk/examples/basic/src/: main.rs
crates/privchat-sdk/examples/multi_account/: Cargo.toml  ERROR_ANALYSIS.md  MIGRATION_STATUS.md  README.md  TEST_PHASES_V2_COMPLETE.md
crates/privchat-sdk/examples/multi_account/src/: account_manager.rs  event_system.rs  main.rs  realistic_test_phases.rs  simple_test.rs  test_coordinator.rs  test_coordinator_v2.rs  test_phases.rs  test_phases_v2.rs  types.rs
crates/privchat-sdk/examples/push_test/: Cargo.toml  README.md
crates/privchat-sdk/examples/push_test/src/: device_simulator.rs  main.rs  test_scenarios.rs
crates/privchat-sdk/examples/transfer/: Cargo.toml  main.rs
crates/privchat-sdk/migrations/: V20241119070909__init.sql  V20260210193000__blacklist.sql  V20260214110000__message_server_id_unique.sql  V20260215193000__message_server_id_global_unique.sql  V20260215194000__standardize_message_server_id_column.sql  V20260401140000__group_member_sync_version.sql  V20260401143000__entity_sync_version_cache.sql  V20260415100000__message_media_state_fields.sql  V20260416100000__channel_extra_peer_read_pts.sql  V20260416110000__message_extra_delivered.sql  V20260515210000__friend_request_status.sql  V20260628120000__channel_peer_user_id.sql  V20260710120000__user_avatar_local_cache.sql  V20260710160000__group_member_count.sql  V20260710200000__purge_stale_zero_pts_cache.sql
crates/privchat-sdk/src/: attachment_crypto.rs  avatar_cache.rs  client.rs  connection_state.rs  error.rs  error_codes.rs  events.rs  http_client.rs  lib.rs  lifecycle.rs  local_store.rs  media_download.rs  media_store.rs  message.rs  message_content.rs  message_type.rs  presence.rs  rate_limiter.rs  receive_pipeline.rs  rpc_client.rs  sdk.rs  storage_actor.rs  sync_commit_applier.rs  sync_coordinator.rs  typing.rs  version.rs
crates/privchat-sdk/src/lifecycle/: push_hook.rs
crates/privchat-sdk/src/network/: mod.rs
crates/privchat-sdk/src/runtime/: mod.rs  runtime_provider.rs
crates/privchat-sdk/src/storage/: advanced_features.rs  advanced_features_integration.rs  db_actor.rs  deduplication.rs  entities.rs  kv.rs  media.rs  media_preprocess.rs  message_state.rs  migrate.rs  migration.rs  mod.rs  queue.rs  reaction.rs  sqlite.rs  typing.rs
crates/privchat-sdk/src/storage/dao/: channel.rs  channel_extra.rs  channel_member.rs  conversation.rs  conversation_extra.rs  friend_dao.rs  group_dao.rs  group_member_dao.rs  mention.rs  message.rs  message_extra.rs  message_reaction.rs  migration.rs  mod.rs  reminder.rs  reminders.rs  robot.rs  user.rs
crates/privchat-sdk/src/storage/queue/: file_send_consumer.rs  file_send_queue.rs  file_send_task.rs  mod.rs  priority.rs  receive_consumer.rs  receive_queue.rs  receive_task.rs  retry_policy.rs  send_consumer.rs  send_task.rs
crates/privchat-sdk/src/sync/: bootstrap.rs  commit_applier.rs  mod.rs  pts_manager.rs  sync_engine.rs
crates/privchat-sdk/src/sync/entity_sync/: applier.rs  cursor_store.rs  engine.rs  entity_type.rs  mod.rs
crates/privchat-sdk/src/task/: mod.rs  task_handle.rs  task_registry.rs
crates/privchat-sdk/src/utils/: mod.rs  time.rs
crates/privchat-sdk/tests/: attachment_crypto_test.rs
crates/privchat_ffi/: Cargo.toml
crates/privchat_ffi/src/: lib.rs
crates/privchat_ffi/test/: ffi_tests.rs
crates/privchat_sdk/examples/: main.rs
crates/privchat_sdk/src/: handlers.rs  message.rs  sdk.rs
docs/: ACCOUNT_ACTIVE_AUDIT.md  ARTIFACT_CONTRACT.md  CLIENT_SERVICE_FACADE_SPEC.md  SAMPLE_FLOW.md  SDK_API_CONTRACT.md  SDK_FFI_CLIENT_SERVICE_REFACTOR_AUDIT.md  SDK_WRAPPER_GAP_ANALYSIS.md  api-gap-report.md  architecture-spec.md  ffi-api-inventory.md  legacy-api-mapping.md  legacy-sdk-migration-plan.md  migration-execution-guide.md  migration-progress.md  public-api-v2.md
scripts/: gate.sh  run_local_sync_regression.sh  update-api-gap-report.sh
