[workspace]
members = [
  "crates/privchat-sdk",
  "crates/privchat-sdk-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]
homepage = "https://privchat.dev"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
bytes = "1"
refinery = { version = "0.9", features = ["rusqlite", "int8-versions"] }
sled = "0.34"
sha2 = "0.10"
hex = "0.4"

msgtrans = { path = "../msgtrans" }
privchat-protocol = { path = "../privchat-protocol" }
uniffi = { version = "0.31.0", features = ["cli"] }
