[workspace]
members = [
  "crates/privchat-sdk",
  "crates/privchat-sdk-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]
homepage = "https://privchat.dev"
repository = "https://github.com/nicegram/privchat-sdk"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
bytes = "1"
refinery = { version = "0.9", features = ["rusqlite", "int8-versions"] }
sled = "0.34"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"

msgtrans = { version = "1.0.6", path = "../msgtrans" }
privchat-protocol = { version = "0.1.0", path = "../privchat-protocol" }
uniffi = { version = "0.31.0", features = ["cli"] }
