[package]
name = "privchat_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
privchat-sdk = { path = "../privchat-sdk" }
privchat-protocol = { path = "../../../privchat-protocol" }
msgtrans = { path = "../../../msgtrans" }

[lib]
crate-type = ["cdylib"]
