[package]
name = "privchat-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FFI bindings for Privchat SDK using UniFFI"

[lib]
crate-type = [
    # Needed by uniffi for Android bindings
    "cdylib",
    # Needed by uniffi for iOS bindings
    "staticlib",
    # Needed for testing and intermediate language bindings
    "lib"
]

[features]
default = []

[dependencies]
privchat-sdk = { path = "../privchat-sdk" }
privchat-protocol = { path = "../../../privchat-protocol" }
privchat-ffi-macros = { path = "../privchat-ffi-macros" }

# UniFFI and async runtime
# Use main branch for latest fixes (e.g. segfault when completing foreign futures #2733 in 0.31).
# To pin back to release: uniffi = { version = "0.31", features = ["tokio"] }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", branch = "main", features = ["tokio"] }
async-compat = "0.2"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-compat = "0.2"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", branch = "main", features = ["build"] }

[dev-dependencies]
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }

# Note: UniFFI-generated code uses #[no_mangle] which requires unsafe,
# so we cannot forbid unsafe_code in this crate
