[package]
name = "privchat-sdk-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "UniFFI-based FFI bindings for the PrivChat SDK"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uniffi.workspace = true
privchat-protocol.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
privchat-sdk = { path = "../privchat-sdk" }

[build-dependencies]
uniffi.workspace = true

[dev-dependencies]
tokio.workspace = true
