[package]
name = "privchat-sdk-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "UniFFI-based FFI bindings for the PrivChat SDK"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uniffi.workspace = true
privchat-protocol.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
privchat-sdk = { path = "../privchat-sdk" }
# R8.6b-rust — QR decoder shared across Android/iOS via UniFFI.
# Minimal feature set: `decoders` + `qrcode` only (no image, no encoders,
# no other barcode formats, no svg, no client_support). `encoding_rs` is
# kept on so QR byte-mode payloads with ECI charset switches (UTF-8 /
# Shift-JIS / GBK) decode correctly — pure-ASCII login QRs work either
# way, but defensive for future encodings adds only ~200 KB.
rxing = { version = "0.9", default-features = false, features = ["decoders", "qrcode", "encoding_rs"] }
# QR_CODE_SPEC v1.4 D0 — pure-Rust QR encoder. Pulled into release builds
# so `qr_encode_matrix` can produce QR cell matrices that the UI layer
# renders via gearui-kit Box grids (no platform Bitmap / CoreImage path).
# Same crate that used to live in dev-dependencies for the R8.6b round-trip
# test fixture — promoted here because the test path already validated
# encode → rxing-decode round-trip.
qrcode = { version = "0.14", default-features = false }

[build-dependencies]
uniffi.workspace = true

[dev-dependencies]
tokio.workspace = true
# R8.6c diagnostic — `qr_decode_image` example reads a real PNG/JPG/WebP
# file and feeds its luma plane to qr_decode_luma. Dev-only; not in release.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[[example]]
name = "qr_decode_image"
path = "examples/qr_decode_image.rs"
