[package]
name = "privchat-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3"

# 数据库相关
rusqlite = { version = "0.36", features = ["bundled", "chrono"] }
refinery = { version = "0.9", features = ["rusqlite", "int8-versions"] }
sled = "0.34"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 字节操作
bytes = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }

# 雪花ID生成
snowflake_me = { version = "0.5.0", features = ["ip-fallback"] }

# 错误处理
thiserror = "1.0"

# 异步通道
crossbeam-channel = "0.5"

# 并发同步原语
parking_lot = "0.12"

# 哈希计算
sha2 = "0.10"
hex = "0.4"

# 日志支持
tracing = "0.1"
tracing-subscriber = "0.3"

# 文件系统
walkdir = "2.0"

# 正则表达式
regex = "1.0"

# 随机数生成
rand = "0.8"

# 异步 trait 支持
async-trait = "0.1"

# 图片处理（缩略图、压缩）
image = "0.25"

# HTTP 客户端（文件上传/下载，纯 Rust rustls，无 OpenSSL）
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "json", "rustls-tls"] }
futures-util = "0.3"

# 本地依赖
privchat-protocol = { path = "../../../privchat-protocol" }
msgtrans = { path = "../../../msgtrans" }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
tracing-subscriber = "0.3"
jsonwebtoken = "9.3"