[package]
name = "privchat-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core Rust SDK for the PrivChat messaging platform"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
bytes.workspace = true
msgtrans.workspace = true
privchat-protocol.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
refinery.workspace = true
sled.workspace = true
sha2.workspace = true
hex.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
rand.workspace = true
snowflake_me = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
libc = "0.2"
