[package]
name = "accounts"
version = "0.1.0"
edition = "2021"
authors = ["PrivChat Team"]
description = "PrivChat SDK multi-account example"

[workspace]

[[bin]]
name = "accounts"
path = "main.rs"

[dependencies]
privchat-sdk = { path = "../.." }
privchat-protocol = { path = "../../../../../privchat-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
