[package]
name = "push_test"
version = "0.1.0"
edition = "2021"
authors = ["PrivChat Team"]
description = "PrivChat 推送系统测试项目"

# 独立项目，不参与 workspace
[workspace]

[[bin]]
name = "push_test"
path = "src/main.rs"

[dependencies]
# PrivChat SDK 依赖
privchat-sdk = { path = "../.." }
privchat-protocol = { path = "../../../../../privchat-protocol" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 其他工具
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
